--- a/style.css
+++ b/style.css
@@ -41,6 +41,38 @@
     width: 803px;
     height: 806px;
     margin: 0 auto;
-    border:2px solid red;
+    /* border:2px solid red; */
     margin-top: 90px;
+}
+.second-section-content{
+    display: flex;
+      justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.second-section-content h1{
+    color: rgb(255,0,0);
+    font-family: inter;
+    font-size: 88px;
+    font-weight: 700px;
+}
+.second-section-content p{
+    color: rgb(255,0,0);
+    font-family: inter;
+    font-size: 24px;
+    font-weight: 500px;
+}
+.second-section-content h3{
+    color: rgb(7,2,17);
+    font-family: inter;
+    font-size: 48px;
+    font-weight: 700px;
+}
+.image-container{
+    height: 802.3px;
+    width: 500px;
+}
+.image-container img{
+  /* height: 100%;
+    width: 100%;   */
 }
