--- a/style.css
+++ b/style.css
@@ -200,3 +200,40 @@ position: relative;
     justify-content: space-between;
     align-items: center;
 }
+.portfolio-section-container
+{
+    width: 1320px;
+    height: 1163px;
+    /* border: 2px solid red; */
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 4px;
+}
+.portfolio-section-container h1{
+    color: rgb(7,2,17);
+    font-family: Marriwher;
+    font-size:48 px;
+    font-weight: 900px;
+    margin-bottom: 5px;
+   
+width: 566px;
+height: 60px;
+
+}
+.portfolio-section-container p{
+    width: 896px;
+height: 64px;
+font-family:Inter;
+
+}
+.item img{
+    margin-top: 7px;
+    width: 424px;
+height: 450px;
+}
+.portfolio-item{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+
+}
